--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="padding-block-900">
       <div class="container">
         <div class="even-columns">
           <div>
@@ -48,7 +48,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="padding-block-900">
       <div class="container">
         <div class="even-columns">
           <div>
@@ -83,13 +83,13 @@
       </div>
     </section>
 
-    <section class="carousel">
-      <h2 class="fs-secondary-heading">What they've said</h2>
+    <section class="carousel | padding-block-700">
+      <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
       <!-- Carousel here -->
       <button class="button">Get Started</button>
     </section>
 
-    <section class="cta | bg-primary-400 text-neutral-100">
+    <section class="cta | padding-block-700 bg-accent-400 text-neutral-100">
       <div class="container">
         <div class="even-columns">
           <div>
@@ -103,7 +103,7 @@
     </section>
   </main>
 
-  <footer class="bg-neutral-900 text-neutral-100">
+  <footer class="padding-block-700 bg-neutral-900 text-neutral-100">
     <div class="container">
       <div class="even-columns">
         <div>
